--- a/admin/index.html
+++ b/admin/index.html
@@ -5,6 +5,16 @@
     <title>Title</title>
 </head>
 <body>
-
+    <h1>Admin</h1>
+    <p>Dashboard</p>
+    <a href="/admin/users">Users</a>
+    <a href="/admin/posts">Posts</a>
+    <a href="/admin/comments">Comments</a>
+    <a href="/admin/categories">Categories</a>
+    <a href="/admin/tags">Tags</a>
+    <a href="/admin/roles">Roles</a>
+    <a href="/admin/permissions">Permissions</a>
+    <a href="/admin/settings">Settings</a>
+    <a href="/admin/logout">Logout</a>
 </body>
 </html>
