--- a/admin/dashboard/index.html
+++ b/admin/dashboard/index.html
@@ -1,13 +1,127 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+    <title>Dashboard</title>
+    <link rel="shortcut icon" href="../../assets/images/logo/favicon.ico">
+    <link rel="stylesheet" href="../../assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
+    <link rel="stylesheet" href="../../assets/css/admin.css">
+<body>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-2 sidebar p-3">
+            <div class="text-center">
+                <img src="../../assets/images/logo/logo.png" alt="logo"/>
+            </div>
+            <nav class="nav flex-column">
+                <a class="nav-link active" href="#">
+                    <i class="fas fa-tachometer-alt me-2"></i>Dashboard
+                </a>
+                <a class="nav-link" href="#">
+                    <i class="fas fa-box me-2"></i>Products
+                </a>
+                <a class="nav-link" href="#">
+                    <i class="fas fa-shopping-bag me-2"></i>Orders
+                </a>
+                <a class="nav-link" href="#">
+                    <i class="fas fa-users me-2"></i>Customers
+                </a>
+                <a class="nav-link" href="#">
+                    <i class="fas fa-chart-bar me-2"></i>Reports
+                </a>
+                <a class="nav-link" href="#">
+                    <i class="fas fa-percentage me-2"></i>Promotions
+                </a>
+                <a class="nav-link" href="#">
+                    <i class="fas fa-tags me-2"></i>Categories
+                </a>
+                <a class="nav-link" href="#">
+                    <i class="fas fa-cog me-2"></i>Settings
+                </a>
+            </nav>
+        </div>
+        <div class="col-md-10 p-4">
+            <div class="row mb-4">
+                <div class="col-md-3">
+                    <div class="stats-card">
+                        <h6>Customers</h6>
+                        <h2>36,254</h2>
+                        <small class="percent-up">↑ 5.27% Since last month</small>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="stats-card">
+                        <h6>Orders</h6>
+                        <h2>5,543</h2>
+                        <small class="percent-down">↓ 1.08% Since last month</small>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="stats-card">
+                        <h6>Revenue</h6>
+                        <h2>$6,254</h2>
+                        <small class="percent-down">↓ 7.00% Since last month</small>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="stats-card">
+                        <h6>Growth</h6>
+                        <h2>+30.56%</h2>
+                        <small class="percent-up">↑ 4.87% Since last month</small>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <!-- Revenue Chart -->
+                <div class="col-md-8">
+                    <div class="chart-container">
+                        <div class="d-flex justify-content-between align-items-center mb-4">
+                            <h5 class="mb-0">REVENUE</h5>
+                            <div>
+                                <span class="me-3">Current Week: $58,254</span>
+                                <span>Previous Week: $69,524</span>
+                            </div>
+                        </div>
+                        <div style="height: 300px; background-color: #f8f9fa;">
+                            <div class="text-center py-5">Chart Placeholder</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="chart-container">
+                        <h5 class="mb-4">REVENUE BY LOCATION</h5>
+                        <div class="map-container mb-4"></div>
+                        <div class="location-stats">
+                            <div class="d-flex justify-content-between mb-2">
+                                <span>New York</span>
+                                <span>72k</span>
+                            </div>
+                            <div class="progress mb-3">
+                                <div class="progress-bar bg-primary" style="width: 75%"></div>
+                            </div>
+                            <div class="d-flex justify-content-between mb-2">
+                                <span>San Francisco</span>
+                                <span>39k</span>
+                            </div>
+                            <div class="progress mb-3">
+                                <div class="progress-bar bg-warning" style="width: 45%"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="../../assets/libraries/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
