change structure images folder

--- a/index.html
+++ b/index.html
@@ -97,19 +97,19 @@
         <h2><span class="category-icon"></span> NHẠC CỤ</h2>
         <div class="instrument-row">
             <div class="instrument-item">
-                <img src="assets/images/trong1.jfif" alt="Đàn Piano">
+                <img src="assets/images/product/trong1.jfif" alt="Đàn Piano">
                 <div class="overlay">
                     <span class="icon"><i class="fas fa-angle-right"></i></span> <a href="">ĐÀN PIANO</a> 
                 </div>
             </div>
             <div class="instrument-item">
-                <img src="assets/images/trong2.jfif" alt="Đàn Organ">
+                <img src="assets/images/product/trong2.jfif" alt="Đàn Organ">
                 <div class="overlay">
                     <span class="icon"><i class="fas fa-angle-right"></i></span> <a href="">ĐÀN ORGAN - KEYBOARD</a>
                 </div>
             </div>
             <div class="instrument-item">
-                <img src="assets/images/trong3.jfif" alt="Đàn Guitar">
+                <img src="assets/images/product/trong3.jfif" alt="Đàn Guitar">
                 <div class="overlay">
                     <span class="icon"><i class="fas fa-angle-right"></i></span> <a href="">ĐÀN GUITAR</a>
                 </div>
@@ -120,19 +120,19 @@
         <h2><span class="category-icon"></span>THIẾT BỊ ÂM THANH</h2>
         <div class="instrument-row">
             <div class="instrument-item">
-                <img src="assets/images/trong1.jfif" alt="Đàn Piano">
+                <img src="assets/images/product/trong1.jfif" alt="Đàn Piano">
                 <div class="overlay">
                     <span class="icon"><i class="fas fa-angle-right"></i></span> <a href="">ĐÀN PIANO</a> 
                 </div>
             </div>
             <div class="instrument-item">
-                <img src="assets/images/trong2.jfif" alt="Đàn Organ">
+                <img src="assets/images/product/trong2.jfif" alt="Đàn Organ">
                 <div class="overlay">
                     <span class="icon"><i class="fas fa-angle-right"></i></span> <a href="">ĐÀN ORGAN - KEYBOARD</a>
                 </div>
             </div>
             <div class="instrument-item">
-                <img src="assets/images/trong3.jfif" alt="Đàn Guitar">
+                <img src="assets/images/product/trong3.jfif" alt="Đàn Guitar">
                 <div class="overlay">
                     <span class="icon"><i class="fas fa-angle-right"></i></span> <a href="">ĐÀN GUITAR</a>
                 </div>
@@ -143,7 +143,7 @@
         <h2>SẢN PHẨM NỔI BẬT</h2>
         <div class="product-row">
             <div class="product-item">
-                <img src="assets/images/trong3.jfif" alt="Đàn Piano">
+                <img src="assets/images/product/trong3.jfif" alt="Đàn Piano">
                 <div class="product-info">
                     <p class="product-name">KAWAI K-300</p>
                     <p class="product-price"><span class="current-price">182,000,000 đ</span> <span class="old-price">194,700,000 đ</span></p>
@@ -151,7 +151,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="assets/images/trong1.jfif" alt="Đàn Piano Kawai K-300">
+                <img src="assets/images/product/trong1.jfif" alt="Đàn Piano Kawai K-300">
                 <div class="product-info">
                     <p class="product-name">KAWAI K-300</p>
                     <p class="product-price"><span class="current-price">182,000,000 đ</span> <span class="old-price">194,700,000 đ</span></p>
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="assets/images/trong2.jfif" alt="Đàn Piano Roland RP-30">
+                <img src="assets/images/product/trong2.jfif" alt="Đàn Piano Roland RP-30">
                 <div class="product-info">
                     <p class="product-name">ROLAND RP-30</p>
                     <p class="product-price"><span class="current-price">16,500,000 đ</span> <span class="old-price">21,760,000 đ</span></p>
@@ -184,7 +184,7 @@
         <div class="divider"></div>
         <div class="event-grid">
             <div class="event">
-                <img src="assets/images/trong1.jfif" alt="Music Corner in the City">
+                <img src="assets/images/product/trong1.jfif" alt="Music Corner in the City">
                 <div class="event-content">
                     <h3>Sự kiện: Music Corner in the City</h3>
                     <p>Vào 3 ngày 08, 09, 10/11/2024 tại Vincom Đồng Khởi, 72 Lê Thánh Tôn, phường Bến Nghé, quận 1 sẽ diễn ra sự kiện Music Corner in the City do Việt Thương Music thực hiện. Với mục đích nhằm góp phần tạo thêm cho</p>
@@ -192,7 +192,7 @@
                 </div>
             </div>
             <div class="event">
-                <img src="assets/images/trong2.jfif" alt="Pre-order sản phẩm Boss GX-10">
+                <img src="assets/images/product/trong2.jfif" alt="Pre-order sản phẩm Boss GX-10">
                 <div class="event-content">
                     <h3>Chương trình pre-order sản phẩm Boss GX-10</h3>
                     <p>Bạn là một guitarist đam mê và luôn tìm kiếm những công cụ âm nhạc hiện đại để nâng cao chất lượng âm thanh? Vậy thì Boss GX-10 chính là cái tên không thể bỏ qua. Với hàng loạt tính năng ưu việt và thiết kế nhỏ</p>
@@ -200,7 +200,7 @@
                 </div>
             </div>
             <div class="event">
-                <img src="assets/images/trong3.jfif" alt="Sinh nhật ưu đãi 10%">
+                <img src="assets/images/product/trong3.jfif" alt="Sinh nhật ưu đãi 10%">
                 <div class="event-content">
                     <h3>Sinh nhật rộn ràng - Nhận ngay ưu đãi 10% tại Việt Thương Music</h3>
                     <p>Sinh nhật sắp đến, bạn đã sẵn sàng đón tuổi mới đầy ý nghĩa chưa? Hãy để Việt Thương Music đồng hành cùng bạn với chương trình khuyến mãi đặc biệt – giảm ngay 10% trên tất cả sản phẩm!</p>
@@ -210,36 +210,36 @@
         </div>
     </div>
     <div class="logo-container">
-        <img src="assets/images/acus-logo.png" alt="">
-        <img src="assets/images/boss.png" alt="">
-        <img src="assets/images/CASIO.png" alt="">
-        <img src="assets/images/charvel.png" alt="">
-        <img src="assets/images/Daddario_logo.png" alt="">
-        <img src="assets/images/deviser-logo.jpg" alt="">
-        <img src="assets/images/elixir.png" alt="">
-        <img src="assets/images/evh.png" alt="">
-        <img src="assets/images/fender.png" alt="">
-        <img src="assets/images/footer_logo_02.gif" alt="">
-        <img src="assets/images/gregbennet.png" alt="">
-        <img src="assets/images/gretsch.png" alt="">
-        <img src="assets/images/hammond.png" alt="">
-        <img src="assets/images/Headrush-logo.jpg" alt="">
-        <img src="assets/images/jackson.png" alt="">
-        <img src="assets/images/kawai.png" alt="">
-        <img src="assets/images/logo-kohler-campbell-01.jpg" alt="">
-        <img src="assets/images/logo_dan_guitar_cordoba.jpg" alt="">
-        <img src="assets/images/logo_dan_piano_boston.png" alt="">
-        <img src="assets/images/LogoBlackstar.png" alt="">
-        <img src="assets/images/logofisman.png" alt="">
-        <img src="assets/images/logosteinway.png" alt="">
-        <img src="assets/images/no_image.png" alt="">
-        <img src="assets/images/rodgers.png" alt="">
-        <img src="assets/images/roland.png" alt="">
-        <img src="assets/images/samick.png" alt="">
-        <img src="assets/images/sire-logo.png" alt="">
-        <img src="assets/images/suzuki.png" alt="">
-        <img src="assets/images/takamine.png" alt="">
-        <img src="assets/images/tanglewood_1.jpg" alt="">
+        <img src="assets/images/logo_brands/acus-logo.png" alt="">
+        <img src="assets/images/logo_brands/boss.png" alt="">
+        <img src="assets/images/logo_brands/CASIO.png" alt="">
+        <img src="assets/images/logo_brands/charvel.png" alt="">
+        <img src="assets/images/logo_brands/Daddario_logo.png" alt="">
+        <img src="assets/images/logo_brands/deviser-logo.jpg" alt="">
+        <img src="assets/images/logo_brands/elixir.png" alt="">
+        <img src="assets/images/logo_brands/evh.png" alt="">
+        <img src="assets/images/logo_brands/fender.png" alt="">
+        <img src="assets/images/logo_brands/footer_logo_02.gif" alt="">
+        <img src="assets/images/logo_brands/gregbennet.png" alt="">
+        <img src="assets/images/logo_brands/gretsch.png" alt="">
+        <img src="assets/images/logo_brands/hammond.png" alt="">
+        <img src="assets/images/logo_brands/Headrush-logo.jpg" alt="">
+        <img src="assets/images/logo_brands/jackson.png" alt="">
+        <img src="assets/images/logo_brands/kawai.png" alt="">
+        <img src="assets/images/logo_brands/logo-kohler-campbell-01.jpg" alt="">
+        <img src="assets/images/logo_brands/logo_dan_guitar_cordoba.jpg" alt="">
+        <img src="assets/images/logo_brands/logo_dan_piano_boston.png" alt="">
+        <img src="assets/images/logo_brands/LogoBlackstar.png" alt="">
+        <img src="assets/images/logo_brands/logofisman.png" alt="">
+        <img src="assets/images/logo_brands/logosteinway.png" alt="">
+        <img src="assets/images/logo_brands/no_image.png" alt="">
+        <img src="assets/images/logo_brands/rodgers.png" alt="">
+        <img src="assets/images/logo_brands/roland.png" alt="">
+        <img src="assets/images/logo_brands/samick.png" alt="">
+        <img src="assets/images/logo_brands/sire-logo.png" alt="">
+        <img src="assets/images/logo_brands/suzuki.png" alt="">
+        <img src="assets/images/logo_brands/takamine.png" alt="">
+        <img src="assets/images/logo_brands/tanglewood_1.jpg" alt="">
     
 
     </div>
@@ -308,9 +308,9 @@
             <div class="footer-section">
                 <h3>SOCIAL</h3>
                 <div class="social-icons">
-                    <img src="assets/images/youtube.jfif" alt="">
-                    <img src="assets/images/facebook.png" alt="">
-                    <img src="assets/images/zalo.jpg" alt="Zalo">
+                    <img src="assets/images/socials/youtube.jfif" alt="">
+                    <img src="assets/images/socials/facebook.png" alt="">
+                    <img src="assets/images/socials/zalo.jpg" alt="Zalo">
                 </div>
                 <h3>HỆ THỐNG WEBSITE</h3>
                 <ul>
@@ -338,8 +338,8 @@
                 </div>
                 <div class="certifications">
                     <h2>CHỨNG NHẬN</h2>
-                    <img src="assets/images/chungnhan.png" alt="">
-                    <img src="assets/images/dmca.png" alt="">
+                    <img src="assets/images/utils/chungnhan.png" alt="">
+                    <img src="assets/images/utils/dmca.png" alt="">
                 </div>
             </div>
         </div>
