change index admin

--- a/admin/index.html
+++ b/admin/index.html
@@ -16,5 +16,6 @@
     <a href="/admin/permissions">Permissions</a>
     <a href="/admin/settings">Settings</a>
     <a href="/admin/logout">Logout</a>
+    Day la trang dashboard cua admin
 </body>
 </html>
