change index page in admin

--- a/admin/index.html
+++ b/admin/index.html
@@ -16,7 +16,9 @@
     <a href="/admin/categories">Categories</a>
     <a href="/admin/tags">Tags</a>
     <a href="/admin/roles">Roles</a>
+    <a href="/admin/roles">Roles</a>
     <a href="/admin/permissions">Permissions</a>
+    <a href="/admin/roles">Roles</a>
     <a href="/admin/settings">Settings</a>
     <a href="/admin/logout">Logout</a>
     Day la trang dashboard cua admin
