--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Admin</h1>
+    <p>This is admin page</p>
     <p>Dashboard</p>
     <a href="/admin/users">Users</a>
     <a href="/admin/posts">Posts</a>
