--- a/admin/index.html
+++ b/admin/index.html
@@ -3,6 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body {
+            background-color: #f1f1f1;
+            font-family: Arial, sans-serif;
+        }
+        h1 {
+            color: #333;
+            text-align: center;
+        }
+        p {
+            color: #333;
+            text-align: center;
+        }
+        a {
+            display: block;
+            margin: 10px 0;
+            padding: 10px;
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            text-decoration: none;
+        }
+        a:hover {
+            background-color: #555;
+        }
+    </style>
 </head>
 <body>
     <h1>Admin</h1>
