change path img logo-container in index file

--- a/index.html
+++ b/index.html
@@ -210,36 +210,36 @@
         </div>
     </div>
     <div class="logo-container">
-        <img src="assets/images/logo_brands/acus-logo.png" alt="">
-        <img src="assets/images/logo_brands/boss.png" alt="">
-        <img src="assets/images/logo_brands/CASIO.png" alt="">
-        <img src="assets/images/logo_brands/charvel.png" alt="">
-        <img src="assets/images/logo_brands/Daddario_logo.png" alt="">
-        <img src="assets/images/logo_brands/deviser-logo.jpg" alt="">
-        <img src="assets/images/logo_brands/elixir.png" alt="">
-        <img src="assets/images/logo_brands/evh.png" alt="">
-        <img src="assets/images/logo_brands/fender.png" alt="">
-        <img src="assets/images/logo_brands/footer_logo_02.gif" alt="">
-        <img src="assets/images/logo_brands/gregbennet.png" alt="">
-        <img src="assets/images/logo_brands/gretsch.png" alt="">
-        <img src="assets/images/logo_brands/hammond.png" alt="">
-        <img src="assets/images/logo_brands/Headrush-logo.jpg" alt="">
-        <img src="assets/images/logo_brands/jackson.png" alt="">
-        <img src="assets/images/logo_brands/kawai.png" alt="">
-        <img src="assets/images/logo_brands/logo-kohler-campbell-01.jpg" alt="">
-        <img src="assets/images/logo_brands/logo_dan_guitar_cordoba.jpg" alt="">
-        <img src="assets/images/logo_brands/logo_dan_piano_boston.png" alt="">
-        <img src="assets/images/logo_brands/LogoBlackstar.png" alt="">
-        <img src="assets/images/logo_brands/logofisman.png" alt="">
-        <img src="assets/images/logo_brands/logosteinway.png" alt="">
-        <img src="assets/images/logo_brands/no_image.png" alt="">
-        <img src="assets/images/logo_brands/rodgers.png" alt="">
-        <img src="assets/images/logo_brands/roland.png" alt="">
-        <img src="assets/images/logo_brands/samick.png" alt="">
-        <img src="assets/images/logo_brands/sire-logo.png" alt="">
-        <img src="assets/images/logo_brands/suzuki.png" alt="">
-        <img src="assets/images/logo_brands/takamine.png" alt="">
-        <img src="assets/images/logo_brands/tanglewood_1.jpg" alt="">
+        <img src="assets/images/logo/logo_brands/acus-logo.png" alt="">
+        <img src="assets/images/logo/logo_brands/boss.png" alt="">
+        <img src="assets/images/logo/logo_brands/CASIO.png" alt="">
+        <img src="assets/images/logo/logo_brands/charvel.png" alt="">
+        <img src="assets/images/logo/logo_brands/Daddario_logo.png" alt="">
+        <img src="assets/images/logo/logo_brands/deviser-logo.jpg" alt="">
+        <img src="assets/images/logo/logo_brands/elixir.png" alt="">
+        <img src="assets/images/logo/logo_brands/evh.png" alt="">
+        <img src="assets/images/logo/logo_brands/fender.png" alt="">
+        <img src="assets/images/logo/logo_brands/footer_logo_02.gif" alt="">
+        <img src="assets/images/logo/logo_brands/gregbennet.png" alt="">
+        <img src="assets/images/logo/logo_brands/gretsch.png" alt="">
+        <img src="assets/images/logo/logo_brands/hammond.png" alt="">
+        <img src="assets/images/logo/logo_brands/Headrush-logo.jpg" alt="">
+        <img src="assets/images/logo/logo_brands/jackson.png" alt="">
+        <img src="assets/images/logo/logo_brands/kawai.png" alt="">
+        <img src="assets/images/logo/logo_brands/logo-kohler-campbell-01.jpg" alt="">
+        <img src="assets/images/logo/logo_brands/logo_dan_guitar_cordoba.jpg" alt="">
+        <img src="assets/images/logo/logo_brands/logo_dan_piano_boston.png" alt="">
+        <img src="assets/images/logo/logo_brands/LogoBlackstar.png" alt="">
+        <img src="assets/images/logo/logo_brands/logofisman.png" alt="">
+        <img src="assets/images/logo/logo_brands/logosteinway.png" alt="">
+        <img src="assets/images/logo/logo_brands/no_image.png" alt="">
+        <img src="assets/images/logo/logo_brands/rodgers.png" alt="">
+        <img src="assets/images/logo/logo_brands/roland.png" alt="">
+        <img src="assets/images/logo/logo_brands/samick.png" alt="">
+        <img src="assets/images/logo/logo_brands/sire-logo.png" alt="">
+        <img src="assets/images/logo/logo_brands/suzuki.png" alt="">
+        <img src="assets/images/logo/logo_brands/takamine.png" alt="">
+        <img src="assets/images/logo/logo_brands/tanglewood_1.jpg" alt="">
     
 
     </div>
@@ -338,8 +338,8 @@
                 </div>
                 <div class="certifications">
                     <h2>CHỨNG NHẬN</h2>
-                    <img src="assets/images/utils/chungnhan.png" alt="">
-                    <img src="assets/images/utils/dmca.png" alt="">
+                    <img src="assets/images/dcma/chungnhan.png" alt="">
+                    <img src="assets/images/dcma/dmca.png" alt="">
                 </div>
             </div>
         </div>
