--- a/pages/products/detail.html
+++ b/pages/products/detail.html
@@ -1,10 +1,258 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../assets/css/custom.css">
+    <style>
+        .custom-box {
+            display: flex;
+            align-items: center; /* Căn giữa icon và nội dung theo chiều dọc */
+            justify-content: flex-start; /* Căn trái */
+            text-decoration: none;
+            background-color: #fd0; /* Màu nền vàng */
+            border-radius: 8px;
+            padding: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .custom-box:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+        }
+
+        .icon-container {
+            font-size: 40px;
+            color: black; /* Màu icon trắng để nổi bật trên nền vàng */
+            margin-right: 15px; /* Khoảng cách giữa icon và nội dung */
+        }
+
+        .box-content {
+            text-align: left; /* Đảm bảo nội dung căn trái */
+        }
+
+        .box-title {
+            font-size: 18px;
+            font-weight: bold;
+            color: #333;
+        }
+
+        .box-description {
+            font-size: 14px;
+            color: #666;
+            margin-top: 5px;
+        }
+
+        .item {
+            height: 40px;
+            display: inline-block;
+            margin: 15px 5px;
+        }
+
+        footer {
+            background-color: #222;
+            color: #fff;
+        }
+
+        a {
+            text-decoration: none;
+            color: black;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+        footer img {
+            max-width: 100px;
+            margin: 5px;
+        }
+        .card-body {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100%;
+        }
+
+        .card-body .btn {
+            margin-top: auto;
+        }
+    </style>
+    <link rel="stylesheet" href="assets/css/custom.css">
 </head>
+
 <body>
+<!-- Banner Image -->
+<div class="container-fluid p-0">
+    <img src="/assets/images/banners/promo_banners/thang-tri-an-11-2024-vtm-top.png" alt="Tháng Tri Ân Săn Sale"
+         class="img-fluid w-100">
+</div>
+
+<!-- Top Info -->
+<div class="bg-black text-white py-2">
+    <div class="container">
+        <div class="row">
+            <!-- Email và Phone -->
+            <div class="col-12 col-md-6 d-flex align-items-center fw-lighter justify-content-center justify-content-md-start">
+                <span class="me-3">
+                    <i class="bi bi-envelope"></i>
+                    <span>info@example.com</span>
+                </span>
+                <span>
+                    <i class="bi bi-telephone"></i>
+                    <span>123-456-7890</span>
+                </span>
+            </div>
+            <!-- Hệ thống phân phối -->
+            <div class="col-12 col-md-6 d-flex justify-content-center justify-content-md-end align-items-center mt-2 mt-md-0">
+                <span>Hệ thống phân phối</span>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <div class="container">
+        <!-- Logo -->
+        <a class="navbar-brand" href="#">
+            <img src="../../assets/images/logo/logovt.png" alt="Logo" style="height: 40px;">
+        </a>
+
+        <!-- Navbar toggler cho thiết bị nhỏ -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Các liên kết và thanh tìm kiếm -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <!-- Links ở giữa -->
+            <div class="navbar-nav mx-auto fw-bold">
+                <a class="nav-link " href="#">GIỚI THIỆU</a>
+                <a class="nav-link" href="#">SẢN PHẨM</a>
+                <a class="nav-link" href="#">GIÁO DỤC</a>
+                <a class="nav-link" href="#">KHUYẾN MÃI</a>
+                <a class="nav-link" href="#">TIN TỨC</a>
+                <a class="nav-link" href="#">TUYỂN DỤNG</a>
+            </div>
+
+            <!-- Thanh tìm kiếm trên thiết bị lớn -->
+            <form class="d-flex mt-3 mt-lg-0">
+                <input class="form-control me-2" type="search" placeholder="Tìm kiếm" aria-label="Search">
+                <button class="btn btn-dark" type="submit">Tìm</button>
+            </form>
+        </div>
+    </div>
+</nav>
+
+<!-- Carousel -->
+
+
+<!-- Custom Boxes -->
+
+
+<!-- instruments -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Brands -->
+
+
+<!--Contact-->
+
+
+<footer class="bg-dark text-white pt-4 pb-4">
+    <div class="container">
+        <div class="row">
+            <!-- Cột 1: Thông tin Việt Thương -->
+            <div class="col-12 col-md-3 mb-4 mb-md-0">
+                <h5 class="text-uppercase">Thông tin Việt Thương</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white">Giới thiệu công ty</a></li>
+                    <li><a href="#" class="text-white">Hệ thống showroom, đại lý</a></li>
+                    <li><a href="#" class="text-white">Liên Hệ / Góp Ý</a></li>
+                    <li><a href="#" class="text-white">Mua trả góp</a></li>
+                    <li><a href="#" class="text-white">Chương trình Khách hàng thân thiết</a></li>
+                    <li><a href="#" class="text-white">Điều khoản sử dụng website</a></li>
+                    <li><a href="#" class="text-white">Tuyển dụng</a></li>
+                </ul>
+            </div>
+
+            <!-- Cột 2: Hướng dẫn chung -->
+            <div class="col-12 col-md-3 mb-4 mb-md-0">
+                <h5 class="text-uppercase">Hướng dẫn chung</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white">Giao hàng - Đổi trả</a></li>
+                    <li><a href="#" class="text-white">Hướng dẫn mua hàng</a></li>
+                    <li><a href="#" class="text-white">Thanh toán và bảo mật</a></li>
+                    <li><a href="#" class="text-white">Chính sách bảo hành</a></li>
+                    <li><a href="#" class="text-white">Bảo trì đàn piano</a></li>
+                    <li><a href="#" class="text-white">Kích hoạt bảo hành</a></li>
+                </ul>
+            </div>
+
+            <!-- Cột 3: Hỗ trợ khách hàng -->
+            <div class="col-12 col-md-3 mb-4 mb-md-0">
+                <h5 class="text-uppercase">Hỗ trợ khách hàng</h5>
+                <ul class="list-unstyled">
+                    <li><strong>Gọi mua hàng: </strong><a href="tel:18006715" class="text-white">1800 6715 (Miễn phí)</a></li>
+                    <li><strong>Khiếu nại, Bảo hành: </strong><a href="tel:02871088333" class="text-white">028710 88 333</a></li>
+                    <li><strong>Thời gian phục vụ: </strong>8h-22h</li>
+                    <li><strong>Email: </strong><a href="mailto:info@vietthuong.vn" class="text-white">info@vietthuong.vn</a></li>
+                </ul>
+            </div>
+
+            <!-- Cột 4: Social, Phương thức thanh toán, Chứng nhận -->
+            <div class="col-12 col-md-3">
+                <h5 class="text-uppercase">Social</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white">Việt Thương Music Store</a></li>
+                    <li><a href="#" class="text-white">Việt Thương Music School</a></li>
+                </ul>
+
+                <h5 class="text-uppercase mt-4">Phương thức thanh toán</h5>
+                <ul class="list-unstyled">
+                    <li><img src="../../assets/images/payments/visa.png" alt="Phương thức thanh toán" class="img-fluid"/></li>
+                </ul>
+
+                <h5 class="text-uppercase mt-4">Chứng nhận</h5>
+                <ul class="list-unstyled">
+                    <li><img src="../../assets/images/dcma/chungnhan.png" alt="Chứng nhận" class="img-fluid"/></li>
+                    <li><img src="../../assets/images/dcma/dmca.png" alt="Chứng nhận" class="img-fluid"/></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row mt-4">
+            <div class="col-12 text-center">
+                <p>&copy; 2024 Công ty Cổ Phần TM-DV-SX Việt Thương. Tất cả quyền lợi được bảo lưu.</p>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
