--- a/pages/products/detail.html
+++ b/pages/products/detail.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../../assets/css/login.css">
 </head>
 <body>
+Day la trang detail
+<h1>khong co xung dot</h1>
+hi vong se bi cOnflig
 
 </body>
+ten ten
 </html>
