update detail page

--- a/pages/products/detail.html
+++ b/pages/products/detail.html
@@ -362,8 +362,11 @@
                 <p> Là sản phẩm tiêu biểu trong dòng K series của Kawai. Tiếp nối sự thành công của người anh tiền nhiệm là piano Kawai K3, model K3 là cây đàn “Piano Acoustic” đạt danh hiệu cây đàn piano của năm trong suốt 4 năm liên từ 2008 – 2011, do độc giả của tạp chí MMR tại Mỹ bình chọn.</p></p>
                 <img src="/assets/images/products/featured_products/dan-piano-kawai-k300-mau-den-sang-trong.jpg" alt="">    
             </div>
+            
             <div class="tab-content" id="tab2" style="display: none;">
-                <p>Đây là nội dung của tab Thông số kỹ thuật.</p>
+                <p>Đây là nội dung của tab Thông số kỹ thuật.
+                    
+                </p>
             </div>
             <div class="tab-content" id="tab3" style="display: none;">
                 <p>Đây là nội dung của tab Phụ kiện.</p>
