--- a/admin/dashboard/index.html
+++ b/admin/dashboard/index.html
@@ -246,7 +246,7 @@
             </a>
         </div>
     </aside>
-    <div class="main">
+    <div class="main bg-secondary-subtle">
         <nav class="navbar navbar-expand px-4 py-3">
             <form action="#" class="d-none d-sm-inline-block">
                 <div class="input-group">
@@ -293,63 +293,61 @@
                         <div class="card widget-flat">
                             <div class="card-body">
                                 <div class="float-end">
-                                    <i class="mdi mdi-account-multiple widget-icon bg-success-lighten text-success"></i>
+                                    <i class="bi bi-people-fill widget-icon bg-success-lighten text-success"></i>
                                 </div>
-                                <h5 class="text-muted font-weight-normal mt-0" title="Number of Customers">
-                                    Customers</h5>
+                                <h5 class="text-muted font-weight-normal mt-0" title="Số lượng khách hàng">Khách hàng</h5>
                                 <h3 class="mt-3 mb-3">36,254</h3>
                                 <p class="mb-0 text-muted">
-                                    <span class="text-success mr-2"><i class="mdi mdi-arrow-up-bold"></i> 5.27%</span>
-                                    <span class="text-nowrap">Since last month</span>
+                                    <span class="text-success me-2"><i class="bi bi-arrow-up"></i> 5.27%</span>
+                                    <span class="text-nowrap">So với tháng trước</span>
                                 </p>
-                            </div> <!-- end card-body-->
-                        </div> <!-- end card-->
-                    </div> <!-- end col-->
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="col-xl-3 col-md-6 mb-4">
                         <div class="card widget-flat">
                             <div class="card-body">
                                 <div class="float-end">
-                                    <i class="mdi mdi-cart-plus widget-icon bg-danger-lighten text-danger"></i>
+                                    <i class="bi bi-cart-plus widget-icon bg-danger-lighten text-danger"></i>
                                 </div>
-                                <h5 class="text-muted font-weight-normal mt-0" title="Number of Orders">Orders</h5>
+                                <h5 class="text-muted font-weight-normal mt-0" title="Số lượng đơn hàng">Đơn hàng</h5>
                                 <h3 class="mt-3 mb-3">5,543</h3>
                                 <p class="mb-0 text-muted">
-                                    <span class="text-danger mr-2"><i class="mdi mdi-arrow-down-bold"></i> 1.08%</span>
-                                    <span class="text-nowrap">Since last month</span>
+                                    <span class="text-danger me-2"><i class="bi bi-arrow-down"></i> 1.08%</span>
+                                    <span class="text-nowrap">So với tháng trước</span>
                                 </p>
-                            </div> <!-- end card-body-->
-                        </div> <!-- end card-->
-                    </div> <!-- end col-->
+                            </div>
+                        </div>
+                    </div>
 
-                    <!-- Second Row -->
                     <div class="col-xl-3 col-md-6 mb-4">
                         <div class="card widget-flat">
                             <div class="card-body">
                                 <div class="float-end">
-                                    <i class="mdi mdi-currency-usd widget-icon bg-info-lighten text-info"></i>
+                                    <i class="bi bi-currency-dollar widget-icon bg-info-lighten text-info"></i>
                                 </div>
-                                <h5 class="text-muted font-weight-normal mt-0" title="Average Revenue">Revenue</h5>
+                                <h5 class="text-muted font-weight-normal mt-0" title="Doanh thu trung bình">Doanh thu</h5>
                                 <h3 class="mt-3 mb-3">$6,254</h3>
                                 <p class="mb-0 text-muted">
-                                    <span class="text-danger mr-2"><i class="mdi mdi-arrow-down-bold"></i> 7.00%</span>
-                                    <span class="text-nowrap">Since last month</span>
+                                    <span class="text-danger me-2"><i class="bi bi-arrow-down"></i> 7.00%</span>
+                                    <span class="text-nowrap">So với tháng trước</span>
                                 </p>
-                            </div> <!-- end card-body-->
-                        </div> <!-- end card-->
-                    </div> <!-- end col-->
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="col-xl-3 col-md-6 mb-4">
                         <div class="card widget-flat">
                             <div class="card-body">
                                 <div class="float-end">
-                                    <i class="mdi mdi-pulse widget-icon bg-warning-lighten text-warning"></i>
+                                    <i class="bi bi-graph-up widget-icon bg-warning-lighten text-warning"></i>
                                 </div>
-                                <h5 class="text-muted font-weight-normal mt-0" title="Growth">Growth</h5>
+                                <h5 class="text-muted font-weight-normal mt-0" title="Tăng trưởng">Tăng trưởng</h5>
                                 <h3 class="mt-3 mb-3">+ 30.56%</h3>
                                 <p class="mb-0 text-muted">
-                                    <span class="text-success mr-2"><i class="mdi mdi-arrow-up-bold"></i> 4.87%</span>
-                                    <span class="text-nowrap">Since last month</span>
+                                    <span class="text-success me-2"><i class="bi bi-arrow-up"></i> 4.87%</span>
+                                    <span class="text-nowrap">So với tháng trước</span>
                                 </p>
                             </div>
                         </div>
@@ -366,17 +364,13 @@
                                         <i class="mdi mdi-dots-vertical"></i>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-right">
-                                        <!-- item-->
-                                        <a href="javascript:void(0);" class="dropdown-item">Sales Report</a>
-                                        <!-- item-->
-                                        <a href="javascript:void(0);" class="dropdown-item">Export Report</a>
-                                        <!-- item-->
-                                        <a href="javascript:void(0);" class="dropdown-item">Profit</a>
-                                        <!-- item-->
-                                        <a href="javascript:void(0);" class="dropdown-item">Action</a>
+                                        <a href="#" class="dropdown-item">Báo cáo doanh thu</a>
+                                        <a href="#" class="dropdown-item">Xuất báo cáo</a>
+                                        <a href="#" class="dropdown-item">Lợi nhuận</a>
+                                        <a href="#" class="dropdown-item">Hành động</a>
                                     </div>
                                 </div>
-                                <h4 class="header-title mb-3">Projections Vs Actuals</h4>
+                                <h4 class="header-title mb-3">Dự báo so với thực tế</h4>
 
                                 <canvas id="myChart" class="h-100"></canvas>
 
@@ -386,112 +380,115 @@
                     <div class="col-xl-5 col-lg-6 ">
                         <div class="card h-100">
                             <div class="card-body">
-                                <h4 class="header-title mb-3">Sales Distribution</h4>
+                                <h4 class="header-title mb-3">Phân bổ doanh thu</h4>
                                 <canvas id="pieChart"></canvas>
                             </div>
                         </div>
                     </div>
                 </div>
+
                 <div class="row">
                     <div class="col-xl-6 col-lg-12 order-lg-2 order-xl-1">
                         <div class="card">
                             <div class="card-body">
-                                <a href="" class="btn btn-sm btn-link float-right mb-3">Export
-                                    <i class="mdi mdi-download ml-1"></i>
+                                <a href="" class="btn btn-sm btn-link float-right mb-3" style="text-decoration: none;">
+                                    Xuất báo cáo
+                                    <i class="bi bi-download ml-1"></i>
                                 </a>
-                                <h4 class="header-title mt-2">Top Selling Products</h4>
+
+                                <h4 class="header-title mt-2">Sản phẩm bán chạy nhất</h4>
 
                                 <div class="table-responsive">
                                     <table class="table table-centered table-nowrap table-hover mb-0">
                                         <tbody>
                                         <tr>
                                             <td>
-                                                <h5 class="font-14 my-1 font-weight-normal">ASOS Ridley High Waist</h5>
-                                                <span class="text-muted font-13">07 April 2018</span>
+                                                <h5 class="font-14 my-1 font-weight-normal">Alesis Turbo Mesh Kit</h5>
+                                                <span class="text-muted font-13">07 Tháng 4, 2018</span>
                                             </td>
                                             <td>
                                                 <h5 class="font-14 my-1 font-weight-normal">$79.49</h5>
-                                                <span class="text-muted font-13">Price</span>
+                                                <span class="text-muted font-13">Giá</span>
                                             </td>
                                             <td>
                                                 <h5 class="font-14 my-1 font-weight-normal">82</h5>
-                                                <span class="text-muted font-13">Quantity</span>
+                                                <span class="text-muted font-13">Số lượng</span>
                                             </td>
                                             <td>
                                                 <h5 class="font-14 my-1 font-weight-normal">$6,518.18</h5>
-                                                <span class="text-muted font-13">Amount</span>
+                                                <span class="text-muted font-13">Số tiền</span>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td>
-                                                <h5 class="font-14 my-1 font-weight-normal">Marco Lightweight Shirt</h5>
-                                                <span class="text-muted font-13">25 March 2018</span>
+                                                <h5 class="font-14 my-1 font-weight-normal">Alesis Crimson II SE</h5>
+                                                <span class="text-muted font-13">25 Tháng 3, 2018</span>
                                             </td>
                                             <td>
                                                 <h5 class="font-14 my-1 font-weight-normal">$128.50</h5>
-                                                <span class="text-muted font-13">Price</span>
+                                                <span class="text-muted font-13">Giá</span>
                                             </td>
                                             <td>
                                                 <h5 class="font-14 my-1 font-weight-normal">37</h5>
-                                                <span class="text-muted font-13">Quantity</span>
+                                                <span class="text-muted font-13">Số lượng</span>
                                             </td>
                                             <td>
                                                 <h5 class="font-14 my-1 font-weight-normal">$4,754.50</h5>
-                                                <span class="text-muted font-13">Amount</span>
+                                                <span class="text-muted font-13">Số tiền</span>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td>
-                                                <h5 class="font-14 my-1 font-weight-normal">Half Sleeve Shirt</h5>
-                                                <span class="text-muted font-13">17 March 2018</span>
+                                                <h5 class="font-14 my-1 font-weight-normal">ROLAND TD-02KV</h5>
+                                                <span class="text-muted font-13">17 Tháng 3, 2018</span>
                                             </td>
                                             <td>
                                                 <h5 class="font-14 my-1 font-weight-normal">$39.99</h5>
-                                                <span class="text-muted font-13">Price</span>
+                                                <span class="text-muted font-13">Giá</span>
                                             </td>
                                             <td>
                                                 <h5 class="font-14 my-1 font-weight-normal">64</h5>
-                                                <span class="text-muted font-13">Quantity</span>
+                                                <span class="text-muted font-13">Số lượng</span>
                                             </td>
                                             <td>
                                                 <h5 class="font-14 my-1 font-weight-normal">$2,559.36</h5>
-                                                <span class="text-muted font-13">Amount</span>
+                                                <span class="text-muted font-13">Số tiền</span>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td>
-                                                <h5 class="font-14 my-1 font-weight-normal">Lightweight Jacket</h5>
-                                                <span class="text-muted font-13">12 March 2018</span>
+                                                <h5 class="font-14 my-1 font-weight-normal">Combo EXX725SP/C760</h5>
+                                                <span class="text-muted font-13">12 Tháng 3, 2018</span>
                                             </td>
                                             <td>
                                                 <h5 class="font-14 my-1 font-weight-normal">$20.00</h5>
-                                                <span class="text-muted font-13">Price</span>
+                                                <span class="text-muted font-13">Giá</span>
                                             </td>
                                             <td>
                                                 <h5 class="font-14 my-1 font-weight-normal">184</h5>
-                                                <span class="text-muted font-13">Quantity</span>
+                                                <span class="text-muted font-13">Số lượng</span>
                                             </td>
                                             <td>
                                                 <h5 class="font-14 my-1 font-weight-normal">$3,680.00</h5>
-                                                <span class="text-muted font-13">Amount</span>
+                                                <span class="text-muted font-13">Số tiền</span>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td>
-                                                <h5 class="font-14 my-1 font-weight-normal">Marco Shoes</h5>
-                                                <span class="text-muted font-13">05 March 2018</span>
+                                                <h5 class="font-14 my-1 font-weight-normal">PEARL EXPORT EXX725SP/C777 TRỐNG BỘ MÀU SLIPSTREAM WHITE</h5>
+                                                <span class="text-muted font-13">05 Tháng 3, 2018</span>
                                             </td>
                                             <td>
                                                 <h5 class="font-14 my-1 font-weight-normal">$28.49</h5>
-                                                <span class="text-muted font-13">Price</span>
+                                                <span class="text-muted font-13">Giá</span>
                                             </td>
                                             <td>
                                                 <h5 class="font-14 my-1 font-weight-normal">69</h5>
-                                                <span class="text-muted font-13">Quantity</span>
+                                                <span class="text-muted font-13">Số lượng</span>
                                             </td>
                                             <td>
                                                 <h5 class="font-14 my-1 font-weight-normal">$1,965.81</h5>
-                                                <span class="text-muted font-13">Amount</span>
+                                                <span class="text-muted font-13">Số tiền</span>
                                             </td>
                                         </tr>
 
@@ -500,7 +497,8 @@
                                 </div> <!-- end table-responsive-->
                             </div> <!-- end card-body-->
                         </div> <!-- end card-->
-                    </div> <!-- end col-->
+                    </div>
+                    <!-- end col-->
 
                     <div class="col-xl-3 col-lg-6 order-lg-1">
                         <div class="card">
