update footer in index

--- a/index2.html
+++ b/index2.html
@@ -856,37 +856,25 @@
         </div>
     </div>
 
-    <div class="bg-primary mt-5">
+    <section id="about" class="py-5 bg-primary mt-5">
         <div class="container">
-            <div class="row">
-                <!-- Phần Video bên trái chiếm 12 cột trên màn hình nhỏ và 6 cột trên màn hình lớn -->
-                <div class="col-12 col-md-6 mb-4 mb-md-0">
-                    <div class="embed-responsive embed-responsive-16by9 p-4">
-                        <iframe width="100%" height="360" src="https://www.youtube.com/embed/ZaK9Wi5ho0o"
-                                title="Eminem - Temporary (feat. Skylar Grey) [Official Music Video]" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    </div>
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <img src="assets/images/about/about.jpg" class="img-fluid rounded shadow" alt="About Us">
                 </div>
-
-                <!-- Phần Nội dung bên phải chiếm 12 cột trên màn hình nhỏ và 6 cột trên màn hình lớn -->
-                <div class="col-12 col-md-6 d-flex flex-column justify-content-center">
-                    <h3 class="mb-4">Drum Store gần 30 năm phát triển</h3>
-                    <p class="mb-3">Hơn 70 đại lý lớn nhỏ tại các tỉnh thành Việt Nam</p>
-                    <p class="mb-3">Cam kết đem lại những lợi ích tốt nhất cho khách hàng</p>
-                    <p class="mb-3">Drum Store với hệ thống giáo trình theo tiêu chuẩn Quốc Tế</p>
-                    <p class="mb-3">Dịch vụ cho thuê nhạc cụ, âm thanh ánh sáng lớn nhất</p>
-                    <div class="mt-4">
-                        <img src="assets/images/logo/logovt.png" alt="Drum Store Logo" class="img-fluid">
-                        <img class="mx-4" width="99" height="38" src="assets/images/logo/logo4.png"
-                             alt="Drum Store Logo"
-                             class="img-fluid">
-                    </div>
+                <div class="col-md-6">
+                    <h2 class="mb-4">VỀ CHÚNG TÔI</h2>
+                    <p>Drum Store tự hào là đơn vị hàng đầu trong lĩnh vực cung cấp nhạc cụ trống tại Việt Nam. Với hơn 10 năm kinh nghiệm, chúng tôi cam kết mang đến những sản phẩm chất lượng nhất từ các thương hiệu uy tín trên thế giới.</p>
+                    <ul class="list-unstyled">
+                        <li class="mb-2">✓ 100% sản phẩm chính hãng</li>
+                        <li class="mb-2">✓ Đội ngũ tư vấn chuyên nghiệp</li>
+                        <li class="mb-2">✓ Chế độ bảo hành tốt nhất</li>
+                        <li class="mb-2">✓ Giao hàng toàn quốc</li>
+                    </ul>
                 </div>
-
             </div>
         </div>
-    </div>
+    </section>
 
 
     <!-- Brands -->
