update icon in tab browser

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Drum Store</title>
+    <link rel="icon" href="assets/images/logo.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/custom.css">
@@ -162,7 +163,7 @@
 <body>
 <header>
     <!-- Banner Image -->
-    <img src="/assets/images/banners/promo_banners/thang-tri-an-11-2024-vtm-top.png" alt="Tháng Tri Ân Săn Sale"
+    <img src="/assets/images/banners/banner_header.png" alt="Tháng Tri Ân Săn Sale"
          class="img-fluid w-100">
     <!-- Top Info -->
 
@@ -173,7 +174,7 @@
         <div class="container">
             <!-- Logo -->
             <a class="navbar-brand" href="#">
-                <img src="assets/images/logo/logovt.png" alt="Logo" style="height: 40px;">
+                <img src="assets/images/logo.png" alt="Logo" style="height: 60px;width: auto">
             </a>
 
             <!-- Navbar toggler cho thiết bị nhỏ -->
@@ -186,8 +187,8 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <!-- Links ở giữa -->
                 <div class="navbar-nav mx-auto fw-bold">
-                    <a class="nav-link" href="#">TRANG CHỦ</a>
-                    <a class="nav-link" href="#">GIỚI THIỆU</a>
+                    <a class="nav-link" href="#home">TRANG CHỦ</a>
+                    <a class="nav-link" href="pages/about.html">GIỚI THIỆU</a>
 
                     <!-- Dropdown cho SẢN PHẨM -->
                     <div class="nav-item dropdown">
@@ -383,7 +384,6 @@
     </section>
 
 
-
 </section>
 <footer>
 
@@ -510,13 +510,13 @@
 <!--     render elements-->
 <script>
     const slides = [
-        { src: "assets/images/banners/slider_banners/giai-kho-vtm-2024.png", alt: "Slide 1" },
-        { src: "assets/images/banners/slider_banners/km-tang-voucher-hoc-nhac-vt.png", alt: "Slide 2" },
-        { src: "assets/images/banners/slider_banners/km-vietthuong-pre-order-casio-ap-2024.png", alt: "Slide 3" },
-        { src: "assets/images/banners/slider_banners/samdanfender-ldp-t03.jpg", alt: "Slide 4" },
-        { src: "assets/images/banners/slider_banners/sinh-nhat-khach-hang-home.jpg", alt: "Slide 5" },
-        { src: "assets/images/banners/slider_banners/thang-tri-an-11-2024-vtm-home.png", alt: "Slide 6" },
-        { src: "assets/images/banners/slider_banners/thayday-guitar-vietthuong.jpg", alt: "Slide 7" }
+        {src: "assets/images/banners/slides/banner0.png", alt: "Slide 1"},
+        {src: "assets/images/banners/slides/banner1.png", alt: "Slide 2"},
+        {src: "assets/images/banners/slides/banner2.png", alt: "Slide 3"},
+        {src: "assets/images/banners/slides/banner3.png", alt: "Slide 4"},
+        {src: "assets/images/banners/slides/banner4.png", alt: "Slide 5"},
+        {src: "assets/images/banners/slides/banner5.png", alt: "Slide 6"},
+        {src: "assets/images/banners/slides/banner6.png", alt: "Slide 7"}
     ];
     const instruments = [
         {
