--- a/pages/login/forgot-password.html
+++ b/pages/login/forgot-password.html
@@ -2,9 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Forgot Password</title>
+
+
+    <!--    <script src="../../assets/libraries/bootstrap-5.3.3-dist/js/bootstrap.js"></script>-->
+    <!--    <link rel="stylesheet" href="../../assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.css">-->
+    <link rel="stylesheet" href="../../assets/css/login.css">
 </head>
 <body>
+<div class="login-container">
+    <h3>Đăng nhập với</h3>
+    <div class="social-buttons">
+        <button class="btn-social">
+            <img src="../../assets/images/logo/google-logo.png" alt="Google" style="width: 20px; height: 20px;">
+            &nbsp;Google
+        </button>
+        <button class="btn-social">
+            <img src="../../assets/images/logo/zalo-logo.png" alt="Zalo" style="width: 20px; height: 20px;">
+            &nbsp;Zalo
+        </button>
+    </div>
+    <div class="divider">hoặc</div>
+    <form>
+        <input type="text" class="form-control" id="user-number" placeholder="Nhập số điện thoại">
 
+        <input type="password" class="form-control" id="user-password" placeholder="Nhập mật khẩu">
+
+        <div style="text-align: right; margin-bottom: 15px;">
+            <a href="forgot-password.html" class="forgot-password">Quên mật khẩu?</a>
+        </div>
+        <button type="submit" class="btn-login" id="login-btn">Đăng nhập</button>
+    </form>
+    <div class="footer-links">
+        <p>Ban chưa có tài khoản? <a href="register.html" class="text-link">Đăng ký ngay</a></p>
+    </div>
+</div>
 </body>
+
 </html>
+
