--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -15,21 +15,19 @@
         <h3>Đăng nhập với</h3>
         <div class="social-buttons">
             <button class="btn-social">
-                <img src="http://pluspng.com/img-png/google-logo-png-google-logo-icon-png-transparent-background-1000.png" alt="Google" style="width: 20px; height: 20px;">
+                <img src="../../assets/images/logo/google-logo.png" alt="Google" style="width: 20px; height: 20px;">
                 &nbsp;Google
             </button>
             <button class="btn-social">
-                <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-in-colors/2500/zalo-seeklogo.com-512.png" alt="Zalo" style="width: 20px; height: 20px;">
+                <img src="../../assets/images/logo/zalo-logo.png" alt="Zalo" style="width: 20px; height: 20px;">
                 &nbsp;Zalo
             </button>
         </div>
         <div class="divider">hoặc</div>
         <form>
             <input type="text" class="form-control" id="user-number" placeholder="Nhập số điện thoại">
-            <span class="placeholder-text">SỐ ĐIỆN THOẠI</span>
 
             <input type="password" class="form-control" id="user-password" placeholder="Nhập mật khẩu">
-            <span class="placeholder-text">MẬT KHẨU</span>
 
             <div style="text-align: right; margin-bottom: 15px;">
                 <a href="forgot-password.html" class="forgot-password">Quên mật khẩu?</a>
