update, handle error login inputs event

--- a/pages/login/forgot-password.html
+++ b/pages/login/forgot-password.html
@@ -120,8 +120,9 @@
         <p>Hãy nhập số điện thoại/email của bạn vào bên dưới để bắt đầu quá trình khôi phục mật khẩu.</p>
         <form>
             <div class="field">
-                <input type="text" id="user-email" placeholder="Nhập email khôi phục mật khẩu">
-                <label for="user-email">Email</label>
+                <input type="text" id="user-email" placeholder="Nhập email / số điện thoại để khôi phục mật khẩu" required onblur="validateInput('user-email')">
+                <label for="user-email" id="user-email-label">email / số điện thoại</label>
+                <p id="user-email-error" class="error-message"></p>
             </div>
 
             <button type="submit" class="btn-login" id="forgot-password-btn">Khôi phục mật khẩu</button>
@@ -241,6 +242,20 @@
     </div>
 </footer>
 </body>
+
+<script>
+    function validateInput(id) {
+        const input = document.getElementById(id);
+        const label = document.getElementById(`${id}-label`);
+        const errorElement = document.getElementById(`${id}-error`);
+
+        if (!input.value.trim()) {
+            errorElement.textContent = `Vui lòng không để trống ${label.textContent.toLowerCase()}!`;
+        } else {
+            errorElement.textContent = ''; // Xóa thông báo lỗi nếu input hợp lệ
+        }
+    }
+</script>
 
 </html>
 
