--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -130,13 +130,15 @@
         <div class="divider">hoặc</div>
         <form>
             <div class="field">
-                <input type="text" id="user-number" placeholder="Nhập số điện thoại">
-                <label for="user-number">Số điện thoại</label>
+                <input type="text" id="user-number" placeholder="Nhập số điện thoại" required onblur="validateInput('user-number')">
+                <label for="user-number" id="user-number-label">Số điện thoại</label>
+                <p id="user-number-error" class="error-message"></p>
             </div>
 
             <div class="field">
-                <input type="password" id="user-password" placeholder="Nhập mật khẩu">
-                <label for="user-password">Mật khẩu</label>
+                <input type="password" id="user-password" placeholder="Nhập mật khẩu" required onblur="validateInput('user-password')">
+                <label for="user-password" id="user-password-label">Mật khẩu</label>
+                <p id="user-password-error" class="error-message"></p>
             </div>
 
             <div style="text-align: right; margin-bottom: 15px;">
@@ -259,6 +261,19 @@
     </div>
 </footer>
 </body>
+<script>
+    function validateInput(id) {
+        const input = document.getElementById(id);
+        const label = document.getElementById(`${id}-label`);
+        const errorElement = document.getElementById(`${id}-error`);
+
+        if (!input.value.trim()) {
+            errorElement.textContent = `Vui lòng không để trống ${label.textContent.toLowerCase()}!`;
+        } else {
+            errorElement.textContent = ''; // Xóa thông báo lỗi nếu input hợp lệ
+        }
+    }
+</script>
 
 </html>
 
