--- a/pages/login/register.html
+++ b/pages/login/register.html
@@ -132,28 +132,35 @@
         <div class="divider">hoặc</div>
         <form>
             <div class="field">
-                <input type="text" id="user-name" placeholder="Nhập họ và tên">
-                <label for="user-name">Họ và tên</label>
+                <input type="text" id="user-name" placeholder="Nhập họ và tên" required onblur="validateInput('user-name')">
+                <label for="user-name" id="user-name-label">Họ và tên</label>
+                <p id="user-name-error" class="error-message"></p>
             </div>
             <div class="field">
-                <input type="text" id="user-number" placeholder="Nhập số điện thoại">
-                <label for="user-number">Số điện thoại</label>
+                <input type="text" id="user-number" placeholder="Nhập số điện thoại" required onblur="validateInput('user-number')">
+                <label for="user-number" id="user-number-label">Số điện thoại</label>
+                <p id="user-number-error" class="error-message"></p>
             </div>
             <div class="field">
-                <input type="text" id="user-mail" placeholder="Nhập email (không bắt buộc)">
-                <label for="user-mail">Số điện thoại</label>
+                <!--không bắt buộc email để đăng kí tài khoản-->
+                <input type="text" id="user-email" placeholder="Nhập email">
+                <label for="user-email" id="user-email-label">Email</label>
+                <p id="user-email-error" class="error-message"></p>
             </div>
             <div class="field">
-                <input type="text" id="user-birthday" placeholder="Ngày sinh">
-                <label for="user-birthday">Ngày sinh</label>
+                <input type="text" id="user-birthday" placeholder="Ngày sinh" required onblur="validateInput('user-birthday')">
+                <label for="user-birthday" id="user-birthday-label">Ngày sinh</label>
+                <p id="user-birthday-error" class="error-message"></p>
             </div>
             <div class="field">
-                <input type="password" id="user-password" placeholder="Nhập mật khẩu">
-                <label for="user-password">Mật khẩu</label>
+                <input type="password" id="user-password" placeholder="Nhập mật khẩu" required onblur="validateInput('user-password')">
+                <label for="user-password" id="user-password-label">Mật khẩu</label>
+                <p id="user-password-error" class="error-message"></p>
             </div>
             <div class="field">
-                <input type="password" id="user-confirm-password" placeholder="Nhập lại mật khẩu">
-                <label for="user-confirm-password">Nhập lại mật khẩu</label>
+                <input type="password" id="user-confirm-password" placeholder="Nhập lại mật khẩu" required onblur="validateInput('user-confirm-password')">
+                <label for="user-confirm-password" id="user-confirm-password-label">Nhập lại mật khẩu</label>
+                <p id="user-confirm-password-error" class="error-message"></p>
             </div>
 
             <button type="submit" class="btn-login" id="register-btn">Đăng ký</button>
@@ -274,5 +281,19 @@
     </div>
 </footer>
 </body>
+
+<script>
+    function validateInput(id) {
+        const input = document.getElementById(id);
+        const label = document.getElementById(`${id}-label`);
+        const errorElement = document.getElementById(`${id}-error`);
+
+        if (!input.value.trim()) {
+            errorElement.textContent = `Vui lòng không để trống ${label.textContent.toLowerCase()}!`;
+        } else {
+            errorElement.textContent = ''; // Xóa thông báo lỗi nếu input hợp lệ
+        }
+    }
+</script>
 </html>
 
