update cart page

--- a/pages/account/register.html
+++ b/pages/account/register.html
@@ -119,12 +119,12 @@
         <h3>Đăng ký với</h3>
         <div class="social-buttons">
             <button class="btn-social">
-                <img src="http://pluspng.com/img-png/google-logo-png-google-logo-icon-png-transparent-background-1000.png"
+                <img src="/assets/images/logo/google-logo.png"
                      alt="Google" style="width: 20px; height: 20px;">
                 &nbsp;Google
             </button>
             <button class="btn-social">
-                <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-in-colors/2500/zalo-seeklogo.com-512.png"
+                <img src="/assets/images/logo/zalo-logo.png"
                      alt="Zalo" style="width: 20px; height: 20px;">
                 &nbsp;Zalo
             </button>
